--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.1.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "mongoose": "^6.1.0",
+    "mongoose": "^6.1.1",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.15",
     "socket.io": "^4.2.0"
   }
 }
