--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "express-graphql": "^0.12.0",
     "graphql": "^16.1.0",
+    "graphql-subscriptions": "^2.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^6.1.1",
