--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.1.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "subscriptions-transport-ws": "^0.11.0"
   }
 }
