--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -75,7 +75,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "frontend:build"
+            "browserTarget": "frontend:build",
+            "ssl": true
           },
           "configurations": {
             "production": {
