--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-graphql": "^0.12.0",
+    "fs": "^0.0.1-security",
     "graphql": "^16.2.0",
+    "https": "^1.0.0",
     "mongoose": "^6.1.4",
     "nodemon": "^2.0.15"
   }
