--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -16,8 +16,10 @@
     "express-graphql": "^0.12.0",
     "fs": "^0.0.1-security",
     "graphql": "^16.2.0",
+    "graphql-subscriptions": "^2.0.0",
     "https": "^1.0.0",
     "mongoose": "^6.1.4",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "subscriptions-transport-ws": "^0.11.0"
   }
 }
