--- a/graphql-server/package.json
+++ b/graphql-server/package.json
@@ -4,16 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.1",
-    "cors": "^2.8.5",
+    "@graphql-tools/schema": "^8.3.1",
+    "apollo-server": "^3.6.1",
+    "apollo-server-express": "^3.6.1",
     "express": "^4.17.2",
-    "express-graphql": "^0.12.0",
     "fs": "^0.0.1-security",
     "graphql": "^16.2.0",
     "graphql-subscriptions": "^2.0.0",
