--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "graphql": "^15.0.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
